# machine-learning-project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_data_exploration.ipynb  01_eda.ipynb  02_experiments.ipynb
predictions/: translations.json
src/: config.py  data.py  evaluate.py  preprocessing.py  train.py
