[project]
name = "machine-learning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "keras==3.8.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.0.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tensorflow==2.18.0",
    "tf-keras>=2.18.0",
    "torch>=2.10.0",
    "transformers==4.46.0",
]
